--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         <!-- Include the processing.js library -->
         <!-- See https://khanacademy.zendesk.com/hc/en-us/articles/202260404-What-parts-of-ProcessingJS-does-Khan-Academy-support- for differences -->
         <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.min.js"></script>
-        <script src="rubiks-cube.js"></script>
+        <script src="https://raw.githubusercontent.com/Parzival7962/rubiks-cube/refs/heads/main/rubiks-cube.js"></script>
         </body>
 </html>
