--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
         
         
          <canvas id="mycanvas"></canvas> 
-  
- 
-        <!-- Include the processing.js library -->
+          <!-- Include the processing.js library -->
         <!-- See https://khanacademy.zendesk.com/hc/en-us/articles/202260404-What-parts-of-ProcessingJS-does-Khan-Academy-support- for differences -->
         <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.min.js"></script>
-        <script src="https://raw.githubusercontent.com/Parzival7962/rubiks-cube/refs/heads/main/rubiks-cube.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/Parzival7962/rubiks-cube@main/rubiks-cube.js"></script>
         </body>
 </html>
