--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ draw = function() {
     var current_second = second();
     background(0, 0, 0);
     fill(255, 0, 0);
-    text(timer, 100*1.5, 300*1.5);
+    text(timer, 100*1.5, 300*1.5, 30, 30);
     if(timer_started){
         if (current_second !== prev_second){
             timer++;
@@ -359,7 +359,7 @@ draw = function() {
                 else if(cube[cube_access][l][i] === "y"){
                     fill(213, 255, 0);
                 }
-                text(cube[cube_access][l][i], positions[j][l][i][0]*1.5, positions[j][l][i][1]*1.5);
+                text(cube[cube_access][l][i], positions[j][l][i][0]*1.5, positions[j][l][i][1]*1.5, 30, 30);
             }
         }
     }
